...

final class SearchViewController: BaseViewController {
    
    //MARK: - Variables
    var presenter: SearchPresenterProtocol!

    @IBOutlet weak var searchBar: UISearchBar!
    @IBOutlet weak var searchButton: UIButton!
    @IBOutlet weak var searchButtonBottomConstraint: NSLayoutConstraint!
    @IBOutlet weak var tableView: UITableView!
    
    
    //MARK: - LifeCycles
    override func viewDidLoad() {
...
